--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- CSS only -->
+    <!-- BS CSS-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,16 +18,19 @@
       crossorigin="anonymous"
     />
 
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/bec30509e3.js" crossorigin="anonymous"></script>
+
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <!-- JavaScript Bundle with Popper -->
-  <script
+  <!-- BS JavaScript Bundle with Popper -->
+  <!-- <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
-  ></script>
+  ></script> -->
 </html>
